<resources>
    <string name="app_name">ScoreApp</string>
    <string name="tab_scorer">Scorer</string>
    <string name="tab_record">Historial</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_lastname">Apellido</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_email">email</string>
    <string name="hint_find_record">Nombre, apellido o dni</string>
    <string name="home_evaluate">Evaluar</string>
    <string name="home_header">Bienvenido, ingrese los datos del cliente a evaluar para conocer su score</string>
    <string name="home_rb_male">Masculino</string>
    <string name="home_rb_female">Femenino</string>
    <string name="home_rb_other">Otro</string>
    <string name="approved_body">Felicitaciones! Le informamos que el cliente ha obtenido el score
        suficiente para solicitar un préstamo personal</string>
    <string name="rejected_body">Lamentamos informarle que el cliente no consiguió el suficiente
        score para recibir un préstamo personal</string>
    <string name="rejected_btn">Regresar</string>
    <string name="approved_btn">Regresar</string>
    <string name="empty_records">Aún no hay registros del score de ningún cliente</string>
    <string name="input_name_error">El nombre no es válido</string>
    <string name="input_lastname_error">El apellido no es válido</string>
    <string name="input_dni_error">El DNI no es válido</string>
    <string name="input_email_error">El email no es válido</string>
    <string name="server_error">Ocurrió un error al conectarse con el servidor, reintente</string>
</resources>